--- a/opusapp/src/main/assets/licenses.html
+++ b/opusapp/src/main/assets/licenses.html
@@ -17,7 +17,7 @@
     <h3>Notices for :</h3>
     <ul>
         <li>Material Design icons by Google (Material Design Authors)</li>
-        <li>Tool : Android Holo Colors Generator (Jérôme Van Der Linden)</li>
+        <li>Tool : Android Holo Colors Generator (Jerome Van Der Linden)</li>
         <li>Tool : Notification Icon Generator (Roman Nurik)</li>
         <li>Tool : Launcher Icon Generator (Roman Nurik)</li>
     </ul>
@@ -27,7 +27,6 @@
 
     <h3>Notices for:</h3>
     <ul>
-        <li>Universal Image Loader (Copyright 2011-2014 Sergey Tarasevich)</li>
         <li>AndroidSlidingUpPanel (Umano team)</li>
         <li>PagerSlidingTabStrip (Copyright 2013 Andreas Stuetz)</li>
         <li>drag-sort-listview (Copyright 2012 Carl Bauer)</li>
@@ -35,6 +34,36 @@
     </ul>
     <p>
         <a href="file:///android_asset/apache-2.0.html">Apache License 2.0</a>
+    </p>
+
+    <h3>Notices for:</h3>
+    <ul>
+        <li>Glide (Copyright 2014 Google, Inc. All rights reserved.)</li>
+
+    </ul>
+    <p>
+        Redistribution and use in source and binary forms, with or without modification, are
+        permitted provided that the following conditions are met:<br/>
+        <br/>
+        1. Redistributions of source code must retain the above copyright notice, this list of
+        conditions and the following disclaimer.<br/>
+
+        2. Redistributions in binary form must reproduce the above copyright notice, this list
+        of conditions and the following disclaimer in the documentation and/or other materials
+        provided with the distribution.<br/>
+        <br/>
+        THIS SOFTWARE IS PROVIDED BY GOOGLE, INC. ``AS IS'' AND ANY EXPRESS OR IMPLIED
+        WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND
+        FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL GOOGLE, INC. OR
+        CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
+        CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
+        SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON
+        ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING
+        NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF
+        ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.<br/>
+        <br/>
+        The views and conclusions contained in the software and documentation are those of the
+        authors and should not be interpreted as representing official policies, either expressed<br/>
     </p>
 
     <h3>Notices for:</h3>
