Added: Click on previous button now reset playback position to 0s if > 4s and switch to previous track otherwise. Added: Long click on previous or next button now do a fast seeking backward/forward. Added: Licensing informations for Otto event bus. Fixed: Enforced database integrity (open helper uniqueness now guaranted). Fixed: Force close on database upgrade (with oldVersion = 1 and newVersion = 3).

--- a/opusapp/src/main/assets/licenses.html
+++ b/opusapp/src/main/assets/licenses.html
@@ -30,7 +30,7 @@
         <li>AndroidSlidingUpPanel (Umano team)</li>
         <li>PagerSlidingTabStrip (Copyright 2013 Andreas Stuetz)</li>
         <li>drag-sort-listview (Copyright 2012 Carl Bauer)</li>
-
+        <li>Otto (Copyright 2013 Square, Inc.)</li>
     </ul>
     <p>
         <a href="file:///android_asset/apache-2.0.html">Apache License 2.0</a>
@@ -39,7 +39,6 @@
     <h3>Notices for:</h3>
     <ul>
         <li>Glide (Copyright 2014 Google, Inc. All rights reserved.)</li>
-
     </ul>
     <p>
         Redistribution and use in source and binary forms, with or without modification, are
